Refactor application.properties for environment variables
Updated database configuration for production and local environments.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,23 @@
 # ================================
 # Configuración de la base de datos PostgreSQL
 # ================================
-# En Railway, la URL completa (con usuario y contraseña) viene de la
-# variable de entorno DATABASE_URL, que deberás crear en el servicio
-# backend con el valor:
-#   {{ Postgres.DATABASE_URL }}
+# En producción (Railway) se usan variables de entorno:
+#   SPRING_DATASOURCE_URL
+#   SPRING_DATASOURCE_USERNAME
+#   SPRING_DATASOURCE_PASSWORD
 #
-# Si quieres seguir usando la BD local, puedes lanzar la app con otra
-# configuración (por ejemplo application-local.properties) o definir
-# DATABASE_URL=jdbc:postgresql://localhost:5432/inventarios_jamp
-# en tu entorno local.
+# En local, si no existen esas variables, se usan los valores por defecto
+# definidos después de los ":".
 
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/inventarios_jamp}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Admin1234}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ================================
 # Configuración de JPA/Hibernate
 # ================================
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# En desarrollo puedes dejar "update". En producción suele ser mejor "none" o "validate".
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -27,7 +26,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # ================================
 # Configuración del servidor
 # ================================
-server.port=8080
+# En Railway el puerto viene en la variable PORT.
+# En local, si no existe PORT, usa 8080.
+server.port=${PORT:8080}
 
 # ================================
 # Configuración de JWT
