Modify PostgreSQL datasource configuration
Updated database connection properties for production use.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,10 @@
 # ================================
 # Configuración de la base de datos PostgreSQL
 # ================================
-# En producción (Railway) se usan variables de entorno:
-#   SPRING_DATASOURCE_URL
-#   SPRING_DATASOURCE_USERNAME
-#   SPRING_DATASOURCE_PASSWORD
-#
-# En local, si no existen esas variables, se usan los valores por defecto
-# definidos después de los ":".
-
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.username=postgres
+spring.datasource.password=cWlsuNdyWiGVYjINPYSGuMAJGgrzNwFg
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 
 # ================================
 # Configuración de JPA/Hibernate
@@ -27,8 +18,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # ================================
 # Configuración del servidor
 # ================================
-# En Railway el puerto viene en la variable PORT.
-# En local, si no existe PORT, usa 8080.
 server.port=${PORT:8080}
 
 # ================================
