--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # ================================
 # Configuración de la base de datos PostgreSQL
 # ================================
-spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
-spring.datasource.username=postgres
-spring.datasource.password=cWlsuNdyWiGVYjINPYSGuMAJGgrzNwFg
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ================================
