Update PostgreSQL datasource configuration
Updated PostgreSQL database configuration with new connection details.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 # ================================
 # Configuración de la base de datos PostgreSQL
 # ================================
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# ================================
+# Configuración de la base de datos PostgreSQL
+# ================================
+spring.datasource.url=jdbc:postgresql://metro.proxy.rlwy.net:54417/railway
+spring.datasource.username=postgres
+spring.datasource.password=TcWlsuNdyWiGVYyiNPYSGUmAJGgrzWwFg
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ================================
